docs/api/qiskit/0.25/qiskit.circuit.Parameter.mdx
---
title: Parameter
description: API reference for qiskit.circuit.Parameter
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.Parameter
---

# qiskit.circuit.Parameter

<Class id="qiskit.circuit.Parameter" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/circuit/parameter.py" signature="Parameter(name)" modifiers="class">
  Parameter Class for variable parameters.

  Create a new named [`Parameter`](#qiskit.circuit.Parameter "qiskit.circuit.Parameter").

  **Parameters**

  **name** (`str`) – name of the `Parameter`, used for visual representation. This can be any unicode string, e.g. “ϕ”.

  ### \_\_init\_\_

  <Function id="qiskit.circuit.Parameter.__init__" signature="__init__(name)">
    Create a new named [`Parameter`](#qiskit.circuit.Parameter "qiskit.circuit.Parameter").

    **Parameters**

    **name** (`str`) – name of the `Parameter`, used for visual representation. This can be any unicode string, e.g. “ϕ”.
  </Function>

  ## Methods

  |                                                                                                  |                                                                                               |
  | ------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.circuit.Parameter.__init__ "qiskit.circuit.Parameter.__init__")(name)       | Create a new named [`Parameter`](#qiskit.circuit.Parameter "qiskit.circuit.Parameter").       |
  | [`arccos`](#qiskit.circuit.Parameter.arccos "qiskit.circuit.Parameter.arccos")()                 | Arccos of a ParameterExpression                                                               |
  | [`arcsin`](#qiskit.circuit.Parameter.arcsin "qiskit.circuit.Parameter.arcsin")()                 | Arcsin of a ParameterExpression                                                               |
  | [`arctan`](#qiskit.circuit.Parameter.arctan "qiskit.circuit.Parameter.arctan")()                 | Arctan of a ParameterExpression                                                               |
  | [`assign`](#qiskit.circuit.Parameter.assign "qiskit.circuit.Parameter.assign")(parameter, value) | Assign one parameter to a value, which can either be numeric or another parameter expression. |
  | [`bind`](#qiskit.circuit.Parameter.bind "qiskit.circuit.Parameter.bind")(parameter\_values)      | Binds the provided set of parameters to their corresponding values.                           |
  | [`conjugate`](#qiskit.circuit.Parameter.conjugate "qiskit.circuit.Parameter.conjugate")()        | Return the conjugate.                                                                         |
  | [`cos`](#qiskit.circuit.Parameter.cos "qiskit.circuit.Parameter.cos")()                          | Cosine of a ParameterExpression                                                               |
  | [`exp`](#qiskit.circuit.Parameter.exp "qiskit.circuit.Parameter.exp")()                          | Exponential of a ParameterExpression                                                          |
  | [`gradient`](#qiskit.circuit.Parameter.gradient "qiskit.circuit.Parameter.gradient")(param)      | Get the derivative of a parameter expression w\.r.t.                                          |
  | [`log`](#qiskit.circuit.Parameter.log "qiskit.circuit.Parameter.log")()                          | Logarithm of a ParameterExpression                                                            |
  | [`sin`](#qiskit.circuit.Parameter.sin "qiskit.circuit.Parameter.sin")()                          | Sine of a ParameterExpression                                                                 |
  | [`subs`](#qiskit.circuit.Parameter.subs "qiskit.circuit.Parameter.subs")(parameter\_map)         | Substitute self with the corresponding parameter in `parameter_map`.                          |
  | [`tan`](#qiskit.circuit.Parameter.tan "qiskit.circuit.Parameter.tan")()                          | Tangent of a ParameterExpression                                                              |

  ## Attributes

  |                                                                                            |                                                                                              |
  | ------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------- |
  | [`name`](#qiskit.circuit.Parameter.name "qiskit.circuit.Parameter.name")                   | Returns the name of the [`Parameter`](#qiskit.circuit.Parameter "qiskit.circuit.Parameter"). |
  | [`parameters`](#qiskit.circuit.Parameter.parameters "qiskit.circuit.Parameter.parameters") | Returns a set of the unbound Parameters in the expression.                                   |

  ## Members list

  ### arccos

  <Function id="qiskit.circuit.Parameter.arccos" signature="arccos()">
    Arccos of a ParameterExpression
  </Function>

  ### arcsin

  <Function id="qiskit.circuit.Parameter.arcsin" signature="arcsin()">
    Arcsin of a ParameterExpression
  </Function>

  ### arctan

  <Function id="qiskit.circuit.Parameter.arctan" signature="arctan()">
    Arctan of a ParameterExpression
  </Function>

  ### assign

  <Function id="qiskit.circuit.Parameter.assign" signature="assign(parameter, value)">
    Assign one parameter to a value, which can either be numeric or another parameter expression.

    **Parameters**

    *   **parameter** ([*Parameter*](#qiskit.circuit.Parameter "qiskit.circuit.Parameter")) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    `ParameterExpression`

    **Returns**

    A new expression parameterized by any parameters which were not bound by assignment.
  </Function>

  ### bind

  <Function id="qiskit.circuit.Parameter.bind" signature="bind(parameter_values)">
    Binds the provided set of parameters to their corresponding values.

    **Parameters**

    **parameter\_values** (`Dict`) – Mapping of Parameter instances to the numeric value to which they will be bound.

    **Raises**

    *   **CircuitError** –

        *   If parameter\_values contains Parameters outside those in self. - If a non-numeric value is passed in parameter\_values.

    *   **ZeroDivisionError** –

        *   If binding the provided values requires division by zero.

    **Return type**

    `ParameterExpression`

    **Returns**

    A new expression parameterized by any parameters which were not bound by parameter\_values.
  </Function>

  ### conjugate

  <Function id="qiskit.circuit.Parameter.conjugate" signature="conjugate()">
    Return the conjugate.

    **Return type**

    `ParameterExpression`
  </Function>

  ### cos

  <Function id="qiskit.circuit.Parameter.cos" signature="cos()">
    Cosine of a ParameterExpression
  </Function>

  ### exp

  <Function id="qiskit.circuit.Parameter.exp" signature="exp()">
    Exponential of a ParameterExpression
  </Function>

  ### gradient

  <Function id="qiskit.circuit.Parameter.gradient" signature="gradient(param)">
    Get the derivative of a parameter expression w\.r.t. a specified parameter expression.

    **Parameters**

    **param** ([*Parameter*](#qiskit.circuit.Parameter "qiskit.circuit.Parameter")) – Parameter w\.r.t. which we want to take the derivative

    **Return type**

    `Union`\[`ParameterExpression`, `float`]

    **Returns**

    ParameterExpression representing the gradient of param\_expr w\.r.t. param
  </Function>

  ### log

  <Function id="qiskit.circuit.Parameter.log" signature="log()">
    Logarithm of a ParameterExpression
  </Function>

  ### name

  <Attribute id="qiskit.circuit.Parameter.name">
    Returns the name of the [`Parameter`](#qiskit.circuit.Parameter "qiskit.circuit.Parameter").
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.Parameter.parameters">
    Returns a set of the unbound Parameters in the expression.

    **Return type**

    `Set`
  </Attribute>

  ### sin

  <Function id="qiskit.circuit.Parameter.sin" signature="sin()">
    Sine of a ParameterExpression
  </Function>

  ### subs

  <Function id="qiskit.circuit.Parameter.subs" signature="subs(parameter_map)">
    Substitute self with the corresponding parameter in `parameter_map`.
  </Function>

  ### tan

  <Function id="qiskit.circuit.Parameter.tan" signature="tan()">
    Tangent of a ParameterExpression
  </Function>
</Class>

